Added english units to measuring tape
Fixed: Faucet should shut off when tank full
Fixed: Reset all broken
Fixed: Faucet slider should gray out when in "auto" mode
Added measuring tape
Fixed the size of the rulers in the water tower tab
Fixed: Velocity sensor should read out water velocity
Fixed: water drops should have size based on water volume, so low trickle is lots of drops.
Fixed: water should look less particulate
Fixed: water drops should be absorbed when they hit the ground
Wired up faucet manual slider to model
Fixed: decrease in volume should be proportional to water velocity
Improved water faucet model
Wired up faucet buttons to model
Made water velocity vary as v=sqrt(2*g*h)
Made water only leak out when hole uncovered
Refactored properties to be public final and removed 'property' from field names
Improved covering panel
Added a drag handle on top of the water tower to change its vertical location
Improvements for water-tower module to look more like mock-up
Added initial support for panel covering
Added initial support for faucet in water-tower module
# 0.00.08 (48319) Jan 28, 2011
Made it so that the pipes can't be dragged offscreen vertically
Made it so that the pipe control point can't be dragged offscreen vertically
Show second pressure sensor at a y location that yields a different pressure value
Hide the balloons
Fixed: units control panel background is incorrect
Don't show any particles near the edges, since their velocity should be zero in physical reality (or a full-blown fluid dynamics simulation)
Use new graphics for pressure sensor node
Added 3 patch image node for pressure sensor
replace incomplete "Reset All" node with ResetAllButtonNode
Use PropertyRadioButton in UnitsControlPanel
Added a grab handle to control the y offset of the input and output pipes
Added a dot icon to the "more" controls in the dots control slider label
Fixed initial location of dropper control
Use dropper control from membrane channels