@@ -36,8 +36,11 @@ public class FluidPressureCanvas extends FluidPressureAndFlowCanvas {
 
         //Some nodes go behind the pool so that it looks like they submerge
         final Point2D.Double rulerModelOrigin = new Point2D.Double( module.getFluidPressureAndFlowModel().getPool().getMinX(), module.getFluidPressureAndFlowModel().getPool().getMinY() );
-        addChild( new MeterStick( transform, module.meterStickVisible, module.rulerVisible, rulerModelOrigin ) );
-        addChild( new EnglishRuler( transform, module.yardStickVisible, module.rulerVisible, rulerModelOrigin ) );
+        final MeterStick meterStick = new MeterStick( transform, module.meterStickVisible, module.rulerVisible, rulerModelOrigin );
+        final EnglishRuler englishRuler = new EnglishRuler( transform, module.yardStickVisible, module.rulerVisible, rulerModelOrigin );
+        synchronizeRulerLocations( meterStick, englishRuler );
+        addChild( meterStick );
+        addChild( englishRuler );
 
         final PoolNode poolNode = new PoolNode( transform, module.getFluidPressureAndFlowModel().getPool(), module.getFluidPressureAndFlowModel().liquidDensity );
 
