@@ -73,8 +73,12 @@ public class WaterTowerCanvas extends FluidPressureAndFlowCanvas {
 
         //Some nodes go behind the pool so that it looks like they submerge
         final Point2D.Double rulerModelOrigin = new Point2D.Double( 0, 0 );
-        addChild( new MeterStick( transform, module.meterStickVisible, module.rulerVisible, rulerModelOrigin, true ) );
-        addChild( new EnglishRuler( transform, module.yardStickVisible, module.rulerVisible, rulerModelOrigin, true ) );
+        final MeterStick meterStick = new MeterStick( transform, module.meterStickVisible, module.rulerVisible, rulerModelOrigin, true );
+        final EnglishRuler englishRuler = new EnglishRuler( transform, module.yardStickVisible, module.rulerVisible, rulerModelOrigin, true );
+        synchronizeRulerLocations( meterStick, englishRuler );
+
+        addChild( meterStick );
+        addChild( englishRuler );
 
         addChild( new FPAFMeasuringTape( transform, module.measuringTapeVisible, module.getFluidPressureAndFlowModel().distanceUnit ) );
 
