@@ -1,3 +1,4 @@
+Fixed: ruler changes location when changing units
 Added english units to measuring tape
 Fixed: Faucet should shut off when tank full
 Fixed: Reset all broken
